manifests/gitpod/014_NetworkPolicy_ws-manager.yaml
---
# networking.k8s.io/v1/NetworkPolicy ws-manager
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  labels:
    app: gitpod
    component: ws-manager
  name: ws-manager
  namespace: gitpod
spec:
  ingress:
    - {}
  podSelector:
    matchLabels:
      app: gitpod
      component: ws-manager
  policyTypes:
    - Ingress
